--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
+            android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <!-- This keeps the window background of the activity showing
                  until Flutter renders its first frame. It can be removed if
@@ -38,10 +39,15 @@
         </activity>
         <activity android:name="com.braintreepayments.api.ThreeDSecureActivity" android:exported="true">
         </activity>
-        <activity android:name="com.example.flutter_braintree.FlutterBraintreeCustom" android:theme="@style/Theme.AppCompat.Light" android:exported="true">
+        <activity
+            android:name="com.example.flutter_braintree.FlutterBraintreeCustom"
+            android:theme="@style/Theme.AppCompat.Light"
+            android:exported="true">
         </activity>
 
-        <meta-data android:name="com.google.android.gms.wallet.api.enabled" android:value="true"/>
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true"/>
 
         <meta-data
             android:name="flutterEmbedding"
