--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,9 +46,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.braintreepayments.api:drop-in:6.8.0'
-    implementation 'com.google.android.gms:play-services-wallet:16.0.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0-alpha03'
+    implementation 'com.braintreepayments.api:drop-in:6.9.0'
+    implementation 'com.google.android.gms:play-services-wallet:16.0.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     components.all {
         allVariants {
